Overlay wo: Change from auto-fit of overlay text elements to defined % fontsize, since all overlay text elements are (basically) gauranteed-size.  Limit width of team names, and set overflow: hidden to prevent team name overlap of score if name is too long.

--- a/html/views/wo.css
+++ b/html/views/wo.css
@@ -56,33 +56,33 @@ a {
 #TopBar { left: 0%; width: 100%; top: 0%; height: 100%; text-align: center; z-index: 300; }
 
 #StatusBar a { color: white; }
-#ClockPeriodNumber { top: 86.375%; height: 5%; left: 53.375%; width: 4%; text-align: left; }
-#ClockPeriodTime { top: 84.75%; height: 7%; left: 56.375%; width: 25%; text-align: left; }
+#ClockPeriodNumber { top: 86.375%; height: 5%; left: 53.375%; width: 4%; text-align: left; font-size: 3.6%; }
+#ClockPeriodTime { top: 84.75%; height: 7%; left: 56.375%; width: 25%; text-align: left; font-size: 5.2%; }
 #ClockPeriodTime:not(.ShowPeriod) { display: none; }
 
-#ClockIntermissionTime { top: 84.75%; height: 7%; left: 56.375%; width: 25%; text-align: left; }
+#ClockIntermissionTime { top: 84.75%; height: 7%; left: 56.375%; width: 25%; text-align: left; font-size: 5.2%; }
 #ClockIntermissionTime:not(.ShowIntermission) { display: none; }
 
-#ClockJamTime { top: 84.75%; height: 7%; left: 40.45%; width: 6%; text-align: left; }
+#ClockJamTime { top: 84.75%; height: 7%; left: 40.45%; width: 6%; text-align: left; font-size: 5.2%; }
 #ClockJamTime:not(.ShowJam) { display: none; }
 
-#ClockLineupTime { top: 84.75%; height: 7%; left: 40.45%; width: 6%; text-align: left; }
+#ClockLineupTime { top: 84.75%; height: 7%; left: 40.45%; width: 6%; text-align: left; font-size: 5.2%; }
 #ClockLineupTime:not(.ShowLineup) { display: none; }
 
-#ClockTimeoutTime { top: 84.75%; height: 7%; left: 40.45%; width: 6%; text-align: left}
+#ClockTimeoutTime { top: 84.75%; height: 7%; left: 40.45%; width: 6%; text-align: left; font-size: 5.2%; }
 #ClockTimeoutTime:not(.ShowTimeout) { display: none; }
 
-#ClockJamNumber { top: 86.375%; height: 5%; left: 35.375%; width: 25%; text-align: left; }
+#ClockJamNumber { top: 86.375%; height: 5%; left: 35.375%; width: 25%; text-align: left; font-size: 3.6%; }
 
 
 
 #BottomBar { left: 0%; width: 100%; top 0%; height: 100%; text-align: center; z-index: 300; }
 
-#Team1Name { top: 85.5%; height: 6%; left: 15%; width: 25%; text-align: left; }
-#Team1Score { top: 84.35%; height: 7.5%; right: 67%; width: 25%; text-align: right; }
+#Team1Name { top: 84.75%; height: 6%; left: 15%; width: 12.5%; text-align: left; overflow: hidden; font-size: 5.2%; }
+#Team1Score { top: 84.75%; height: 7.5%; right: 67%; width: 25%; text-align: right; font-size: 5.2%; }
 
-#Team2Name { top: 85.5%; height: 6%; right: 15%; width: 25%; text-align: right; }
-#Team2Score { top: 84.35%; height: 7.5%; left: 67%; width: 25%; text-align: left; }
+#Team2Name { top: 84.75%; height: 6%; right: 15%; width: 12.5%; text-align: right; overflow: hidden; font-size: 5.2%; }
+#Team2Score { top: 84.75%; height: 7.5%; left: 67%; width: 25%; text-align: left; font-size: 5.2%; }
 
 #Team1Name.AlternateName a.Name { display: none; }
 #Team1Name:not(.AlternateName) a.AlternateName { display: none; }
